# chiborg

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
chiborg/: __init__.py  jk_calc.py  jk_data.py  jk_hyp.py  util.py
notebooks/: examples.ipynb
